responsive header completed

--- a/dev-data/index.html
+++ b/dev-data/index.html
@@ -19,17 +19,22 @@
             id="search-box"
             placeholder="search"
           />
-          <a href="#">
-            <img src="./Images/search.png" alt="" />
-          </a>
+          <img src="./Images/search.png" class="search-icon" />
         </div>
         <div class="header-icons">
-          <a href="#"> Favourite </a>
-          <a href=""> Cart </a>
+          <a href="#" class="nav-link"> Favourite </a>
+          <a href="#" class="nav-link"> Cart </a>
+        </div>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
         </div>
       </div>
     </div>
 
     <div id="recipes"></div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
