responsive cards over

--- a/dev-data/index.html
+++ b/dev-data/index.html
@@ -33,7 +33,63 @@
       </div>
     </div>
 
-    <div id="recipes"></div>
+    <div id="recipes">
+      <div class="cards">
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./Images/pizza.jpg" alt="recipe-image" class="card-image" />
+          <div class="card-details">
+            <p>Pizza</p>
+            <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
+            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./app.js"></script>
   </body>
