Favourite section rendered successfully

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -44,7 +44,9 @@
           <div class="card-details">
             <p>Pizza</p>
             <img src="./Images/heart.png" alt="heart" class="card-footer-img" />
-            <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+            <a href="">
+              <img src="./Images/cart.png" alt="cart" class="card-footer-img" />
+            </a>
           </div>
         </div>
 
