--- a/public/homePage.html
+++ b/public/homePage.html
@@ -96,5 +96,9 @@
         </div>
       </div>
     </div>
+
+    <div class="overview">
+      <img src="./Images/overview.png" alt="overview" />
+    </div>
   </body>
 </html>
